final functionality + added fixes + comments
- updated api documentation
- missing: api call since it does not work on localhost
