# docs/apiSpec/swagger.yml
@@ -109,11 +109,11 @@ paths:
           description: successful request
         '403':
           description: invalid credentials
-  /api/courses:
+  /api/courses/registerCourse:
     post:
       tags:
         - courses
-      summary: Create a new course
+      summary: Create a new course and assign people who attend.
       description: ''
       consumes:
         - application/json
@@ -133,73 +133,14 @@ paths:
                 example: Analytics & Big Data
               yearCode:
                 type: string
-                example: B-2017
-              attendees:
+                example: WI/DIF-172
+              users:
                 type: array
-                example: array of lecturer and all participants
+                example: array of module coordinator, lecturer and all participants with role as their attribute (e.g. '.selectedModuleCoordinator = true')
       responses:
         '200':
           description: successful request
         '403':
           description: invalid credentials
-    put:
-      tags:
-        - courses
-      summary: Change a course
-      description: ''
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - in: body
-          name: body
-          required: true
-          schema:
-            required:
-              - title
-              - yearCode
-            properties:
-              title:
-                type: string
-                example: Analytics & Big Data
-              yearCode:
-                type: string
-                example: B-2017
-              attendees:
-                type: array
-                example: the new array of lecturer and all participants
-      responses:
-        '200':
-          description: successful request
-        '403':
-          description: invalid credentials
-    get:
-      tags:
-        - courses
-      summary: return all courses
-      description: ''
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: successful request
-        '403':
-          description: invalid credentials
-  /api/courses/<id>:
-    get:
-      tags:
-        - courses
-      summary: return the course with a specific id.
-      description: ''
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        '200':
-          description: successful request
-        '403':
-          description: invalid credentials
+        '500':
+          description: internal server error
